fixing align footer to bottom

--- a/assets/src/sass/components/_global.scss
+++ b/assets/src/sass/components/_global.scss
@@ -9,10 +9,19 @@ body {
 }
 
 html,
-body, 
-#page,
-#primary {
+body {
     height: 100%;
+}
+
+#page,
+#primary  {
+    min-height: 100%;
+}
+
+#page {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
 }
 
 
