--- a/assets/src/sass/layout/_footer.scss
+++ b/assets/src/sass/layout/_footer.scss
@@ -2,7 +2,6 @@
     background-color: #000;
     color: #fff;
     height: 298px;
-    margin-top: -298px;
 }
 
 .footer__navigation__list {
