--- a/assets/src/sass/layout/_header.scss
+++ b/assets/src/sass/layout/_header.scss
@@ -6,7 +6,6 @@
     height: 72px;
     line-height: 72px;
     vertical-align: middle;
-    margin-bottom: -72px;
     padding-left: 32px;
     position: relative;
     border-bottom: 1px solid $gray5;
@@ -15,6 +14,7 @@
         content: "";
         display: table;
         clear: both;
+        height: 72px;
     }
 }
 
